resources/webidl2/test/invalid/baseline/setter-creator.txt
Syntax error at line 3, since `interface OrderedMap`:
  setter creator void set(DOMString name
                 ^ Invalid operation
